# ClaudeStreet

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  HEARTBEAT.md  Makefile  pyproject.toml  requirements.txt
cdk/: app.py  cdk.json
cdk/stacks/: agents_stack.py  core_stack.py  monitoring_stack.py  order_workflow_stack.py
config/: settings.yaml
skills/risk_management/: SKILL.md
skills/technical_analysis/: SKILL.md
skills/trade_execution/: SKILL.md
src/claudestreet/: __init__.py
src/claudestreet/agents/: __init__.py  analyst.py  base.py  chronicler.py  executor.py  risk_guard.py  sentinel.py  strategist.py
src/claudestreet/connectors/: __init__.py  broker.py  market_data.py  websocket_feeder.py
src/claudestreet/core/: __init__.py  config.py  event_bus.py  memory.py
src/claudestreet/evolution/: __init__.py  dna.py  fitness.py  mutation.py  population.py
src/claudestreet/evolve_engine/: Dockerfile  backtest.py  engine.py  sandbox.py  strategy_template.py  tools.py
src/claudestreet/handlers/: analyst.py  base.py  chronicler.py  dlq_replayer.py  executor.py  risk_guard.py  sentinel.py  strategist.py  stream_processor.py
src/claudestreet/models/: __init__.py  events.py  order_state.py  strategy.py  trade.py
src/claudestreet/skills/: __init__.py  change_detection.py  regime_detection.py  sentiment_analysis.py  technical_analysis.py
tests/unit/: test_agent_decision_steps.py  test_agents.py  test_backtest.py  test_broker_ig.py  test_bug_fixes.py  test_evolution.py  test_memory_layers.py  test_strategist_methods.py
